agregando tercer parrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>aqui iria el titulo de la pagina</h1>
     <h2>esto es para el proyecto de entornos</h2>
+    <h3>esto es un segundo parrafo</h3>
 </body>
 </html>
