--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+    <style href="EstiloCss.css">
 <body>
     <h1>aqui iria el titulo de la pagina</h1>
     <h2>esto es para el proyecto de entornos</h2>
